# amaterasu

./: .env  .gitignore  Cargo.toml  minakanushi.db
migrations/2019-03-28-070112_tasks/: up.sql
migrations/2019-03-28-070118_tasktypes/: down.sql  up.sql
migrations/2019-03-28-071016_categories/: up.sql
migrations/2019-03-29-023514_tasks/: up.sql
migrations/2019-03-29-023531_categories/: up.sql
migrations/2019-03-29-023545_tasktypes/: up.sql
migrations/2019-03-29-023600_achievements/: up.sql
src/: dao.rs  db_executor.rs  db_object.rs  handler.rs  main.rs  modules.rs  schema.rs  task.rs
src/dao/: achievement.rs  category.rs  task.rs  tasktype.rs
src/handler/: achievement.rs  category.rs  task.rs  tasktype.rs
test/spec/: minakanushi_spec.rb  run_rspec.sh
test/spec/payloads/: tasks.json
