[package]
name = "minakanushi"
version = "0.1.0"
authors = ["ec2-user"]
edition = "2018"

[dependencies]
failure = "0.1.5"
dotenv = "0.13.0"
env_logger = "0.6.1"
chrono = { version = "0.4.0", features = ["serde"] }
futures = "0.1.25"

actix-web = "0.7.19"
actix = "0.7.9"

diesel = { version = "1.4.2", features = ["sqlite", "chrono", "r2d2"] }
r2d2 = "0.8.3"

serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
json = "0.11.13"